# mcp-python

./: DANGER-IMPORTANT-READ-FIRST.md  README.md  pyproject.toml
src/mailpal_mcp/: __init__.py  server.py
