[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mailpal-mcp"
version = "1.0.0"
description = "MCP server for MailPal -- free email for AI agents with hardware attestation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
  { name = "Crypt Inc.", email = "admin@mailpal.com" },
]
keywords = [
  "mcp",
  "model-context-protocol",
  "email",
  "ai-agent",
  "smtp",
  "imap",
  "jmap",
  "attestation",
  "mailpal",
  "1id",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Communications :: Email",
]
dependencies = [
  "mcp>=1.27.0",
  "httpx>=0.27.0",
]

[project.scripts]
mailpal-mcp = "mailpal_mcp.server:main"

[project.urls]
Homepage = "https://mailpal.com"
Repository = "https://github.com/mailpal-com/mcp-python"
Issues = "https://github.com/mailpal-com/mcp-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mailpal_mcp"]
